# my-wispr

./: .gitignore  Cargo.toml  README.md
apps/WisprMac/: Package.swift  README.md
apps/WisprMac/Sources/WisprMacApp/: WisprMacApp.swift
assets/desktop/: wispr-settings.desktop
assets/systemd/: wisprd.service
bins/wispr-settings/: Cargo.toml
bins/wispr-settings/src/: linux_main.rs  main.rs
bins/wisprctl/: Cargo.toml
bins/wisprctl/src/: main.rs
bins/wisprd/: Cargo.toml
bins/wisprd/src/: app_context.rs  audio.rs  audio_macos.rs  deepgram.rs  local_whisper.rs  main.rs  overlay.rs  overlay_linux.rs  portal.rs
crates/wispr-core/: Cargo.toml
crates/wispr-core/src/: config.rs  error.rs  install.rs  ipc.rs  lib.rs  llm.rs  models.rs  platform.rs  secrets.rs  shortcuts.rs  typing.rs  whisper.rs
scripts/: install_wispr_mac_dev.sh  setup-uinput.sh  uninstall_wispr_mac.sh
