[workspace]
members = [
    "crates/wispr-core",
    "bins/wisprd",
    "bins/wispr-settings",
    "bins/wisprctl",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
async-channel = "2.5"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "6.0"
evdev = "0.13.2"
futures-util = "0.3"
gio = "0.22.2"
glib = "0.22.3"
gtk = { package = "gtk4", version = "0.11.1", features = ["v4_6"] }
libadwaita = { version = "0.9.1", features = ["v1_6", "gtk_v4_6"] }
gstreamer = "0.25.1"
gstreamer-app = "0.25.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustls = { version = "0.23.37", features = ["ring"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
secret-service = { version = "5.1.0", features = ["rt-tokio-crypto-rust"] }
thiserror = "2.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
uuid = { version = "1.18", features = ["v4", "serde"] }
zbus = { version = "5.14.0", features = ["tokio"] }
zvariant = "5.8"
