[package]
name = "wispr-settings"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gio.workspace = true
glib.workspace = true
gtk.workspace = true
libadwaita.workspace = true
gstreamer.workspace = true
serde_json.workspace = true
tokio.workspace = true
wispr-core = { path = "../../crates/wispr-core" }
zbus.workspace = true

