[package]
name = "wispr-settings"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde_json.workspace = true
tokio.workspace = true
wispr-core = { path = "../../crates/wispr-core" }

[target.'cfg(target_os = "linux")'.dependencies]
gio.workspace = true
glib.workspace = true
gtk.workspace = true
libadwaita.workspace = true
gstreamer.workspace = true
