[package]
name = "wisprd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
chrono.workspace = true
futures-util.workspace = true
hound.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
webrtc-vad.workspace = true
wispr-core = { path = "../../crates/wispr-core" }

[target.'cfg(target_os = "linux")'.dependencies]
gio.workspace = true
glib.workspace = true
gtk.workspace = true
libadwaita.workspace = true
gstreamer.workspace = true
gstreamer-app.workspace = true
zbus.workspace = true
zvariant.workspace = true
