[package]
name = "wispr-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
chrono.workspace = true
clap.workspace = true
dirs.workspace = true
evdev.workspace = true
futures-util.workspace = true
hound.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
secret-service.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
webrtc-vad.workspace = true
zbus.workspace = true
zvariant.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
